- add more mappers dto / fix problems with Lazy entity