@@ -1,94 +1,64 @@
 
 package org.example.univer.mappers;
 
-import org.example.univer.dto.GroupDto;
 import org.example.univer.dto.LectureDto;
+import org.example.univer.exeption.EntityNotFoundException;
 import org.example.univer.models.Group;
 import org.example.univer.models.Lecture;
 import org.example.univer.services.*;
-import org.springframework.stereotype.Component;
+import org.mapstruct.*;
+import org.springframework.beans.factory.annotation.Autowired;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Component
-public class LectureMapper {
-    private final TeacherService teacherService;
-    private final GroupService groupService;
-    private final AudienceService audienceService;
-    private final SubjectService subjectService;
-    private final CathedraService cathedraService;
-    private final LectureTimeService lectureTimeService;
-    private final AudienceMapper audienceMapper;
-    private final CathedraMapper cathedraMapper;
-    private final SubjectMapper subjectMapper;
-    private final LectureTimeMapper lectureTimeMapper;
-    private final TeacherMapper teacherMapper;
-    private final GroupMapper groupMapper;
+@Mapper(
+        componentModel = "spring",
+        uses = {
+                TeacherMapper.class,
+                AudienceMapper.class,
+                SubjectMapper.class,
+                CathedraMapper.class,
+                LectureTimeMapper.class,
+                GroupMapper.class
+        },
+        injectionStrategy = InjectionStrategy.CONSTRUCTOR
+)
+public abstract class LectureMapper {
+    @Autowired protected TeacherService teacherService;
+    @Autowired protected AudienceService audienceService;
+    @Autowired protected SubjectService subjectService;
+    @Autowired protected CathedraService cathedraService;
+    @Autowired protected LectureTimeService lectureTimeService;
+    @Autowired protected GroupService groupService;
 
-    public LectureMapper(TeacherMapper teacherMapper,
-                         LectureTimeMapper lectureTimeMapper,
-                         SubjectMapper subjectMapper,
-                         CathedraMapper cathedraMapper,
-                         AudienceMapper audienceMapper,
-                         TeacherService teacherService,
-                         GroupService groupService,
-                         AudienceService audienceService,
-                         SubjectService subjectService,
-                         CathedraService cathedraService,
-                         LectureTimeService lectureTimeService,
-                         GroupMapper groupMapper) {
-        this.audienceMapper = audienceMapper;
-        this.teacherService = teacherService;
-        this.groupService = groupService;
-        this.audienceService = audienceService;
-        this.subjectService = subjectService;
-        this.cathedraService = cathedraService;
-        this.lectureTimeService = lectureTimeService;
-        this.cathedraMapper = cathedraMapper;
-        this.subjectMapper = subjectMapper;
-        this.lectureTimeMapper = lectureTimeMapper;
-        this.teacherMapper = teacherMapper;
-        this.groupMapper = groupMapper;
-    }
+    @Mapping(target = "teacher", ignore = true)
+    @Mapping(target = "audience", ignore = true)
+    @Mapping(target = "subject", ignore = true)
+    @Mapping(target = "cathedra", ignore = true)
+    @Mapping(target = "time", ignore = true)
+    @Mapping(target = "groups", ignore = true)
+    public abstract Lecture toEntity(LectureDto dto);
 
-    public Lecture toEntity(LectureDto dto) {
-        Lecture lecture = new Lecture();
-        lecture.setId(dto.getId());
-
-        teacherService.findById(dto.getTeacher().getId()).ifPresent(lecture::setTeacher);
-        audienceService.findById(dto.getAudience().getId()).ifPresent(lecture::setAudience);
-        subjectService.findById(dto.getSubject().getId()).ifPresent(lecture::setSubject);
-        cathedraService.findById(dto.getCathedra().getId()).ifPresent(lecture::setCathedra);
-        lectureTimeService.findById(dto.getTime().getId()).ifPresent(lecture::setTime);
+    @AfterMapping
+    protected void afterDtoToEntity(LectureDto dto, @MappingTarget Lecture lect) {
+        teacherService.findById(dto.getTeacher().getId())
+                .ifPresentOrElse(lect::setTeacher, () -> { throw new EntityNotFoundException("Teacher not found"); });
+        audienceService.findById(dto.getAudience().getId())
+                .ifPresentOrElse(lect::setAudience, () -> { throw new EntityNotFoundException("Audience not found"); });
+        subjectService.findById(dto.getSubject().getId())
+                .ifPresentOrElse(lect::setSubject, () -> { throw new EntityNotFoundException("Subject not found"); });
+        cathedraService.findById(dto.getCathedra().getId())
+                .ifPresentOrElse(lect::setCathedra, () -> { throw new EntityNotFoundException("Cathedra not found"); });
+        lectureTimeService.findById(dto.getTime().getId())
+                .ifPresentOrElse(lect::setTime, () -> { throw new EntityNotFoundException("Time slot not found"); });
 
         List<Group> groups = dto.getGroupIds().stream()
-                .map(id -> groupService.findById(id).orElse(null))
-                .collect(Collectors.toList());
-
-        lecture.setGroups(groups);
-        return lecture;
+                .map(id -> groupService.findById(id)
+                        .orElseThrow(() -> new EntityNotFoundException("Group not found: " + id)))
+                .toList();
+        lect.setGroups(groups);
     }
 
-    public LectureDto toDto(Lecture lecture) {
-        LectureDto dto = new LectureDto();
-        dto.setId(lecture.getId());
-        dto.setTeacher(teacherMapper.toDto(lecture.getTeacher()));
-        dto.setAudience(audienceMapper.toDto(lecture.getAudience()));
-        dto.setSubject(subjectMapper.toDto(lecture.getSubject()));
-        dto.setCathedra(cathedraMapper.toDto(lecture.getCathedra()));
-        dto.setTime(lectureTimeMapper.toDto(lecture.getTime()));
-
-        List<Long> groupIds = lecture.getGroups().stream()
-                .map(Group::getId)
-                .collect(Collectors.toList());
-        dto.setGroupIds(groupIds);
-
-        List<GroupDto> groups = lecture.getGroups().stream()
-                .map(groupMapper::toDto)
-                .collect(Collectors.toList());
-        dto.setGroups(groups);
-
-        return dto;
-    }
+    @Mapping(target = "groupIds", expression = "java(lecture.getGroups().stream().map(Group::getId).toList())")
+    public abstract LectureDto toDto(Lecture lecture);
 }
